code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_25.wast
(assert_invalid
  (module (func $type-then-value-nums-vs-void
    (if (i32.const 1) (then (i32.const 1) (i32.const 2)))
  ))
  "type mismatch"
)